--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
 body {
   margin: 0px;
   box-sizing: border-box;
@@ -42,6 +46,12 @@ body > div > div {
   align-items: center;
   gap: 50px;
 }
+#count div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
 
 #game {
   display: flex;
@@ -54,4 +64,9 @@ body > div > div {
   height: 40px;
   width: 100px;
   border-radius: 50px;
+}
+
+.selected {
+  border-width: 7px;
+  border-color: rgb(100, 100, 232);
 }/*# sourceMappingURL=style.css.map */
