--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,7 @@
+$accent: rgb(98, 152, 234);
+$primary: rgba(37, 43, 52, 1);
+$text-color: rgba(37, 43, 52, 1);
+
 @mixin flex($direction, $justify, $align) {
     display: flex;
    flex-direction: $direction;
@@ -11,12 +15,11 @@
 
 body {
     margin: 0px;
-    //padding: 0px;
     box-sizing: border-box;
 
     >div {
         @include flex(column, center, center);
-        background-color: rgb(215, 215, 215);
+        background-color: rgb(224, 227, 233);
         width: 100%;
         height: 100vh;
         box-sizing: border-box;
@@ -36,9 +39,17 @@ body {
     @include flex(row, space-around, center);
 
     button {
+        font-size: 18px;
         width: 200px;
         height: 200px;
         border-radius: 100%;
+        border-color: $accent;
+        box-shadow: 0px 0px 3px rgb(58, 65, 75);
+        //color: $primary;
+        border-style: solid;
+        //border-width: 1px;
+        //box-shadow: inset 0px 0px 8px rgb(58, 65, 75);
+        transition: 0.1s ease-out 0ms;
     }
 }
 
@@ -59,10 +70,36 @@ body {
         height: 40px;
         width: 100px;
         border-radius: 50px;
+        font-size: 12px;
+        background-color: rgb(255, 255, 255);
+        width: 100px;
+        height: 40px;
+        border: 0;
+        box-shadow: 0px 0px 3px rgb(51, 52, 53);
+        color: $text-color;
     }
+
 }
+
+button {
+   transition: 0.1s ease-out 0ms;
+}
+
+button:hover {
+    transform: scale(1.02);
+    box-shadow: 0px 0px 6px rgb(51, 52, 53);
+}
+
+button:active {
+    transform: scale(0.98);
+    box-shadow: 0px 0px 1px rgb(51, 52, 53);
+}
+
 
 .selected {
     border-width: 7px;
     border-color: rgb(100, 100, 232);
+    width: 250px;
+    height: 250px;
+    box-shadow: 0px 0px 8px rgb(58, 65, 75);
 }
