--- a/style.scss
+++ b/style.scss
@@ -103,3 +103,7 @@ button:active {
     height: 250px;
     box-shadow: 0px 0px 8px rgb(58, 65, 75);
 }
+
+#info {
+    transition: 0.5s ease-out 0ms;
+}
